--- a/data-prepper-plugins/otel-trace-raw-processor/src/main/resources/genai-attribute-mappings.yaml
+++ b/data-prepper-plugins/otel-trace-raw-processor/src/main/resources/genai-attribute-mappings.yaml
@@ -1,6 +1,6 @@
 # GenAI attribute mappings from vendor-specific instrumentation libraries to OTel GenAI Semantic Conventions.
 # Each entry maps a source attribute key to a target gen_ai.* key.
-# Optional: wrapSlice: true wraps a scalar string value into a single-element JSON array string.
+# Optional: wrap_as_array: true wraps a scalar string value into a single-element JSON array string.
 #
 # Sources:
 #   OpenInference: https://github.com/Arize-ai/openinference/blob/main/spec/semantic_conventions.md
@@ -65,10 +65,10 @@ openllmetry:
     to: gen_ai.tool.definitions
   - from: llm.response.finish_reason
     to: gen_ai.response.finish_reasons
-    wrapSlice: true
+    wrap_as_array: true
   - from: llm.response.stop_reason
     to: gen_ai.response.finish_reasons
-    wrapSlice: true
+    wrap_as_array: true
   - from: llm.request.type
     to: gen_ai.operation.name
   - from: traceloop.span.kind
