--- a/data-prepper-plugins/otel-trace-raw-processor/src/main/resources/genai-attribute-mappings.yaml
+++ b/data-prepper-plugins/otel-trace-raw-processor/src/main/resources/genai-attribute-mappings.yaml
@@ -1,3 +1,12 @@
+#
+# Copyright OpenSearch Contributors
+# SPDX-License-Identifier: Apache-2.0
+#
+# The OpenSearch Contributors require contributions made to
+# this file be licensed under the Apache-2.0 license or a
+# compatible open source license.
+#
+
 # GenAI attribute mappings from vendor-specific instrumentation libraries to OTel GenAI Semantic Conventions.
 # Each entry maps a source attribute key to a target gen_ai.* key.
 # Optional: wrap_as_array: true wraps a scalar string value into a single-element JSON array string.
